# CARE1-repository

./: .gitignore
Mobius-master/mobius/: sql_action.js
central-server/Mobius-master/: conf.json  mobius.js  package.json
central-server/Mobius-master/mobius/: cin.js  db_action.js  mn.js  mobiusdb.sql  resource.js
central-server/server/: frontendConnector.js  loadBalancing.js
central-server/server/public/: eeei-gateway.css  eeei-gateway.html  eeei-gateway.js  melchor-gateway.html  nec-gateway.css  nec-gateway.html  registration.css
esp32/esp32-lora-transmitter/: platformio.ini
esp32/esp32-lora-transmitter/src/: main.cpp
esp32/esp32-wifi/: platformio.ini
esp32/esp32-wifi/src/: main.cpp
gateways/Zigbee/: README.txt  config_yaml_CM9102F.txt  config_yaml_cp2102N.txt
gateways/gateway/: connectToMQTT.js  gateway.js  gatewayIPE.js  oneM2MFunctions.js  package.json  publish-test.js
gateways/gateway/config/: default.json  deviceList.json
gateways/nCube-Rosemary-master/: conf_mn.json  hit.json  package.json  rosemary.js
gateways/rpi-lora-receiver/: CMakeLists-Backup.txt  CMakeLists.txt  get-paho-mqtt.sh  main.cpp
gateways/rpi-lora-receiver/build-Backup/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  rpi-lora-receiver
gateways/rpi-lora-receiver/build-Backup/RadioLib/: Makefile  cmake_install.cmake
server/: package.json
server/config/: default.json
server/public/: homepage.css  homepage.html  melchor-gateway.css  melchor-gateway.js  nec-gateway.js  registration.html  registration.js
(+4 files in other folders)
